k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /gateway
        pathType: Prefix
        backend:
          service:
            name: app-gateway
            port:
              number: 8080
      - path: /agent
        pathType: Prefix
        backend:
          service:
            name: app-agent
            port:
              number: 8080
